	- aggregate system includes into system.h.
	- rearrange functions to minimize exported routines in librpmbuild API.
	- generalize cpio I/O to eliminate pipe to exec'd gzip on install.
	- add {init,add,expand}Macro args everywhere (new macro.c compatibility)
	- add new fully recursive macro.c
	- their must be a { between two % in a query format (unless %% is used)

2.5.5 -> 2.5.6:
	- sub-packages inherit RPMTAG_EPOCH (just like RPMTAG_VERSION/RELEASE).
	- fix off-by-1 alloca that prevented relocating /.
	- there must be a { between two % in a query format (unless %% is
	  used).

2.5.4 -> 2.5.5:
	- permit rpm to be built in a sub-directory (--srcdir=DIR).
	- return CPIO_BAD_HEADER instead of exiting. (Scott M. Stone)
	- untranslate "(none)" for auto relocating script wrappers.
	- non-linux arch/os identification (Eugene Kanter).
	- portable mode_t/pid_t typedefs.
	- fix check for trailing / in Prefix:
	- remove 2 character language name assumption.
        - add /usr/lib/rpm/find-lang.sh (W. L. Estes <wlestes@uncg.edu>)
	- miscellaneous portability cruft (Eugene Kanter).
	- Makefile: don't use ln -sf.
	- getOutputFrom(): fix race between last read on pipe and child death
	  (exacerbated in 2.5.4).
	- rpm.spec: create /usr/src/redhat/* in %install.

2.5.3 -> 2.5.4:
	- expand args using popt on pre-rpmReadConfigFiles arg pass.
	- skip arch checks if only packaging source rpm.
	- add license field to rpmpopt -qi alias.
	- provides/obsoletes requires tokens that begin with alnum or _.
	- non-zero exit status for verify failures.
	- hpux does setreuid differently (Hermann Lauer).
	- check for setreuid portably (Eugene Kanter).
	- add Serbian translation (Zoltan Csala <zcsala@iname.com>).
	- arch/os tables were not being initialized  for noarch builds.
	- quote users/groups/filenames in --setugids.
	- add Russian translation w man pages (Serguei Koubouchine <ksi@gu.net>)
	- fix virtual file attribute bug that skipped all files in binary rpm.